# ppwatch

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
asif/asif/: bot.py
podcast_index/: README.md  __init__.py  errors.py  podcast_index.py  pyproject.toml  setup.py  test_podcast_index.py
src/: ppwatch.py
